fix blurry label

--- a/src/components/Base.scss
+++ b/src/components/Base.scss
@@ -14,8 +14,8 @@
         & > canvas {
             position: relative;
             display: block;
-            width: 100%;
-            height: 100%;
+            max-width: 100%;
+            max-height: 100%;
         }
     }
     & input {
