--- a/src/components/Group.scss
+++ b/src/components/Group.scss
@@ -13,8 +13,8 @@
         & > canvas {
             position: relative;
             display: block;
-            width: 100%;
-            height: 100%;
+            max-width: 100%;
+            max-height: 100%;
         }
     }
     & .faust-ui-tgroup-tabs {
